# poisson_solvers

./: .gitignore  .pylintrc  pyproject.toml
src/: approach1.py  approach2.py  approach3.py  create_noisy_sources.py  error_analysis.py  error_analysis_jacobi.py  error_analysis_jacobi_conv.py  fig_error_analysis.py  gauss_seidel.py  laplacian.py
