[tool.poetry]
name = "poisson-solver"
version = "0.1.0"
description = ""
authors = ["Renato Miotto <renato.fmiotto@gmail.com>"]
readme = "README.md"
packages = [{include = "poisson_solver"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
taskipy = "^1.12.2"
nptyping = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
